public/web/css/main.css
/* ... */
.c-list__company__item .c-thumbnail {
    background-color: #ffffff;
}

@media (min-width: 601px) {
    .c-list__company__item:first-child {
        margin-left: 6.75rem;
    }
}

@media (min-width: 601px) {
    .c-list__company__item:nth-child(4) {
        margin-right: 6.75rem;
    }
}

.c-list__groupthumb {
    display: flex;
    justify-content: space-between;
}

@media (max-width: 600px) {
    .c-list__groupthumb {
        flex-wrap: wrap;
    }
}

@media (max-width: 600px) {
    .c-list__groupthumb__left {
        width: 100%;
        margin-bottom: 1.875rem;
    }
}

.c-list__groupthumb__left .c-thumbnail {
    width: 37.8125rem;
    height: 31.875rem !important;
}

@media (max-width: 600px) {
    .c-list__groupthumb__left .c-thumbnail {
        width: 100%;
        height: 31.25rem;
    }
}

@media (max-width: 600px) {
    .c-list__groupthumb__right {
        width: 100%;
    }
}

@media (max-width: 600px) {
    .c-list__groupthumb__item {
        width: 100%;
    }
}

.c-list__groupthumb__item .c-thumbnail {
    width: 37.8125rem;
    height: 15rem;
    border-radius: 0.3125rem;
}

@media (max-width: 600px) {
    .c-list__groupthumb__item .c-thumbnail {
        width: 100%;
        height: 31.25rem;
    }
}

.c-list__groupthumb__item:not(:last-child) {
    margin-bottom: 1.875rem;
}

@media (max-width: 600px) {
    .c-link li {
        width: calc(100% / 3);
    }

    .c-link li:not(:last-child) {
        border-right: 0.125rem solid #ffffff;
    }

    .c-link__item {
        display: block;
        text-align: center;
        background-color: #ae8fcc;
        color: #ffffff;
        padding: 0.625rem;
    }
}

.c-navbar {
    display: flex;
}

.c-navbar li a {
    display: block;
}

.c-navbar__right {
    display: flex;
    margin-left: 1.5rem;
}

.c-navbar__right__search {
    position: relative;
    margin-bottom: 0.3125rem;
    padding-top: 0.625rem;
    padding-bottom: 0.75rem;
    padding-left: 1rem;
    padding-right: 1rem;
    border-right: 1px solid rgba(151, 151, 151, 0.2);
}

.c-navbar__right__search input[type="text"] {
    height: 3.75rem;
    font-size: 1rem;
    display: inline-block;
    border: none;
    outline: none;
    color: #333;
    padding: 3px;
    padding-right: 60px;
    width: 0px;
    position: absolute;
    top: -1.25rem;
    right: 0;
    background: none;
    z-index: 3;
    transition: width 0.4s cubic-bezier(0, 0.795, 0, 1);
    cursor: pointer;
}

.c-navbar__right__search input[type="text"]:focus:hover {
    box-shadow: 0 2px 14px 0 rgba(0, 0, 0, 0.12);
}

.c-navbar__right__search input[type="text"]:focus {
    height: 5rem;
    background-color: #fff;
    width: 43.75rem;
    padding: 1.25rem;
    z-index: 1;
    cursor: text;
    box-shadow: 0 2px 14px 0 rgba(0, 0, 0, 0.12);
}

.c-navbar__right__search input[type="submit"] {
    display: inline-block;
    color: red;
    text-indent: -10000px;
    border: none;
    position: absolute;
    top: calcuateRem(20px);
    right: 0;
    z-index: 2;
    cursor: pointer;
    opacity: 0.4;
    cursor: pointer;
    transition: opacity .4s ease;
    background-color: inherit;
}

.c-navbar__right__search input[type="submit"]:hover {
    opacity: 0.8;
}

.c-navbar__right__language {
    display: flex;
    align-items: center;
    padding: 0 0.9375rem 0 1.5625rem;
}

.c-navbar__right__language a {
    font-size: 0.875rem;
    color: #041C57;
    font-family: "sailec-medium", sans-serif;
}
/* ... */

